# iptv-pipeline

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  all.m3u  all.txt  cn.m3u  global.m3u  justfile  manifest.json  meta.json  pyproject.toml  stable.m3u  stable.txt
.github/workflows/: update.yml
.state/: health.json
config/: aliases.json  blacklist.txt  groups.json  upstreams.txt  validation.json
src/iptv_pipeline/: __init__.py  artifacts.py  ci.py  config.py  deep_probe.py  emit.py  fetch.py  main.py  models.py  normalize.py  parse.py  pipeline.py  probe.py  rank.py  safety.py  state.py
state/: health.json
tests/: test_artifacts.py  test_ci.py  test_deep_probe.py  test_emit.py  test_normalize.py  test_parse.py  test_probe.py  test_rank.py  test_safety.py  test_state.py
