[project]
name = "iptv-pipeline"
version = "0.1.0"
description = "自动采集、聚合、去重、验证公开 IPTV 直播源，定时产出 m3u/txt 供小董电视等客户端消费"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]

[project.scripts]
iptv-pipeline = "iptv_pipeline.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iptv_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# 测试内含真实 m3u/txt 样例数据，允许长行
"tests/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
